--- a/worldmap/public/css/worldmap-studio.css
+++ b/worldmap/public/css/worldmap-studio.css
@@ -2,6 +2,23 @@
     height:270px !important;
 }
 
+.prose-area .CodeMirror {
+    width: 400px !important;
+    height:180px !important;
+    border: 1px solid;
+}
+
+#prose-polygon-list {
+    max-height: 180px;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    border:1px solid;
+}
+
+#add-reference-geometry {
+    font-size:70%;
+}
 .wrapper-comp-settings .list-input.settings-list .field.comp-setting-entry {
     padding: 3px 3px !important;
     margin: 0px 6px !important;
@@ -20,5 +37,32 @@
 
 .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
     padding: 0.2em 1em !important;
-    font-size: smaller !important;
+}
+
+#dialog-geo-form body {
+       font-size: 80%;
+       font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
+}
+#dialog-geo-form label, input { display:block; }
+#dialog-geo-form input.text { margin-bottom:12px; width:95%; padding: .4em; }
+#dialog-geo-form fieldset { padding:0; border:0; margin-top:25px; }
+.ui-dialog {
+    padding: .3em;
+    z-index: 1001 !important ;
+}
+.ui-front {
+    z-index: 1000 !important;
+}
+
+.highlight-geometry {
+    cursor: pointer;
+}
+
+#geo-boundary-type {
+    float:right;
+    width: 100px;
+}
+#geo-boundary-type label,
+#geo-boundary-type input {
+    display: inline !important;
 }
