--- a/worldmap/public/css/worldmap-studio.css
+++ b/worldmap/public/css/worldmap-studio.css
@@ -42,6 +42,9 @@
     padding: 0.2em 1em !important;
 }
 
+#geometry-type-label {
+    width: 95%;
+}
 .dialog-form form {
        font-size: 80%;
        font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
@@ -111,6 +114,7 @@
 #geo-boundary-type {
     float:right;
     width: 100px;
+    display: inline-block !important;
 }
 #geo-boundary-type label,
 #geo-boundary-type input {
@@ -213,3 +217,4 @@ label.dependent-property {
     margin-top: 5px !important;
     padding: 0px !important;
 }
+
