adding grade publishing - make scores 'sticky'

--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -287,7 +287,7 @@
                 </tr>
                 <tr>
                     <td style="width:275px">
-                        <label for="id">ID</label>
+                        <label for="id">Unique ID</label>
                         <input type="text" name="id" id="question-id" value="" class="text ui-widget-content ui-corner-all">
                         <label for="color">Tool button color</label>
                         <input type="text" name="color" id="color" class="text ui-widget-content ui-corner-all">
@@ -310,6 +310,7 @@
                         </div>
                     </td>
                 </tr>
+            </table>
         </fieldset>
     </form>
 </div>
