--- a/worldmap/public/css/worldmap-studio.css
+++ b/worldmap/public/css/worldmap-studio.css
@@ -31,7 +31,7 @@
 }
 
 #tabs {
-    height: 325px;
+    height: 324px;
 }
 
 .ui-tabs .ui-tabs-nav li {
@@ -64,6 +64,7 @@
 /*#dialog-layerControl-form label { font-size:80% }*/
 /*#dialog-layerControl-form input.text { margin-bottom:12px; width:95%; padding: .4em; }*/
 /*#dialog-layerControl-form fieldset { padding:0; border:0; margin-top:25px; }*/
+.layerControls .dynatree-container,
 #layer-control .dynatree-container {
     border: none;
 }
@@ -147,7 +148,7 @@ li[role=tab] {
     margin-left: 20px;
     margin-top: 0px;
     padding: 0px;
-    width: 95%;
+    width: 96%;
     font-size: 62.5%;
   }
   #sortable-questions li {
