--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -71,13 +71,15 @@
                             <label class="dependent-property label setting-label" for="map-height">Height</label>
                             <input type="text" id="map-height" style="width:60px !important;" class="dependent-property text ui-widget-content ui-corner-all">
                             <label class="dependent-property label setting-label" for="map-baseLayer">Base Layer</label>
-                            <input type="text" id="map-baseLayer" style="width:350px !important" class="dependent-property text ui-widget-content ui-corner-all">
+                            <input type="text" id="map-baseLayer" style="width:300px !important" class="dependent-property text ui-widget-content ui-corner-all">
+                            <label class="dependent-property label setting-label" for="map-debug">Debug</label>
+                            <input type="checkbox" id="map-debug" class="checkbox"/>
                             <hr/>
                          </td>
                      </tr>
                      <tr>
                          <td style="padding-right:15px; width: 65%;" >
-                            <label class="label setting-label" for="layer-control" style="width:70%;">Layer Controls (double click to modify, drag to reorder)</label>
+                            <label class="label setting-label" for="layer-control" style="width:70%;">Layer Controls (drag to reorder)</label>
                             <span style="width:26% !important; min-width:inherit; text-align:right" class="tip setting-help"><button disabled id="new-node">New node</button></span>
                             <div id="layer-control" class="scroll" style="height:165px">
                                 <div id="layer-controls"/>
@@ -231,18 +233,20 @@
                 <tr>
                     <td colspan="2">
                         <label for="constraint-explanation">Hint (html)</label>
-                        <input type="text" name="constraintExplanation" id="constraint-explanation" value="" class="text ui-widget-content ui-corner-all" style="width:92%">
+                        <input type="text" name="constraintExplanation" id="constraint-explanation" value="" class="required text ui-widget-content ui-corner-all" style="width:92%">
                         <hr/>
                     </td>
                 </tr>
                 <tr>
                     <td style="width:40%">
-                        <label for="constraint-percentOfGrade">% of grade</label>
-                        <input type="text" name="constraintPercentOfGrade" id="constraint-percentOfGrade" value="" class="text ui-widget-content ui-corner-all">
-                        <label for="constraint-percentMatch">% match</label>
-                        <input type="text" name="constraintPercentMatch" id="constraint-percentMatch" value="" class="text ui-widget-content ui-corner-all">
+                        <label for="constraint-percentOfGrade">Score weight</label>
+                        <input type="text" name="constraintPercentOfGrade" id="constraint-percentOfGrade" value="" class="required required-number text ui-widget-content ui-corner-all">
+                        <span id="constraint-percentMatch-span">
+                           <label for="constraint-percentMatch">Percent match</label>
+                           <input type="text" name="constraintPercentMatch" id="constraint-percentMatch" value="" class="required required-number text ui-widget-content ui-corner-all">
+                        </span>
                         <label for="constraint-padding">Padding (meters)</label>
-                        <input type="text" name="constraintPadding" id="constraint-padding" value="" class="text ui-widget-content ui-corner-all">
+                        <input type="text" name="constraintPadding" id="constraint-padding" value="" class="required required-number text ui-widget-content ui-corner-all">
                         <label for="constraint-type">Type</label><br/>
                         <select name="type" id="constraint-type" class="select ui-widget-content ui-corner-all">
                             <option value="excludes">Excludes</option>
@@ -268,6 +272,11 @@
                         </iframe>
                     </td>
                 </tr>
+                <tr>
+                    <td colspan="2">
+                        <span id="constraint-dialog-error" style="color:red;font-size:smaller"/>
+                    </td>
+                </tr>
             </table>
         </fieldset>
     </form>
@@ -281,21 +290,21 @@
                 <tr>
                     <td colspan="2">
                         <label for="explanation">Question (html)</label>
-                        <input type="text" name="explanation" id="explanation" class="text ui-widget-content ui-corner-all">
+                        <input type="text" name="explanation" id="explanation" class="required text ui-widget-content ui-corner-all">
                         <hr/>
                     </td>
                 </tr>
                 <tr>
                     <td style="width:275px">
                         <label for="id">Unique ID</label>
-                        <input type="text" name="id" id="question-id" value="" class="text ui-widget-content ui-corner-all">
+                        <input type="text" name="id" id="question-id" value="" class="required text ui-widget-content ui-corner-all">
                         <label for="color">Tool button color</label>
-                        <input type="text" name="color" id="color" class="text ui-widget-content ui-corner-all">
+                        <input type="text" name="color" id="color" class="required required-color text ui-widget-content ui-corner-all">
                         <label for="hintAfterAttempt"># Attempts before hint</label>
-                        <input type="text" name="hintAfterAttempt" id="hintAfterAttempt" class="text ui-widget-content ui-corner-all">
+                        <input type="text" name="hintAfterAttempt" id="hintAfterAttempt" class="text required required-integer ui-widget-content ui-corner-all">
                         <label for="hintDisplayTime"># Seconds to display hint</label>
-                        <input type="text" name="hintDisplayTime" id="hintDisplayTime" class="text ui-widget-content ui-corner-all">
-                        <label for="response-type">Type of response</label><br/>
+                        <input type="text" name="hintDisplayTime" id="hintDisplayTime" class="text required required-number ui-widget-content ui-corner-all">
+                        <label for="response-type">User response to question</label><br/>
                         <select name="type" id="response-type" class="select ui-widget-content ui-corner-all">
                             <option value="point">Point</option>
                             <option value="polyline">Polyline</option>
@@ -305,9 +314,10 @@
                     <td style="width:100%">
                         <div id="constraint-list-wrapper">
                             <label style="width:50% !important" class="label setting-label" for="constraint-list">Constraints:</label>
-                            <span style="width:40%; text-align:right" class="tip setting-help"><button id="add-constraint">New constraint</button></span>
-                            <ul id="constraint-list" style="width:100%"/>
+                            <span style="width:40%; text-align:right" class="tip setting-help"><button id="new-constraint">New constraint</button></span>
+                            <ul id="constraint-list" class="scroll" style="width:100%; height:130px;"/>
                         </div>
+                        <div id="question-dialog-error" style="color:red;margin-left:20px;font-size:smaller"/>
                     </td>
                 </tr>
             </table>
